# object_recognition

./: CMakeLists.txt  README.md  object_recognition.cpp  pcl_high_level_ctl.cpp  pcl_high_level_ctl.hpp  recognizer.cpp  recognizer.hpp  segmentation.cpp  segmentation.h  typedefs.h
